/*
执行下面的命令
path\to\proto>protoc --java_out=D:\SourceCode\ry\Server\Base\src\main\java *.proto
 */
syntax = "proto3";

package com.ry.base.proto.impl;

option java_multiple_files = true;

import "messageType.proto";
import "messageList.proto";

message Message {
  MessageHeader msgHeader = 1;
  MessageBody msgBody = 2;
}

message MessageHeader {
  MessageID msgId = 1;
  MessageType msgType = 2;
  string version = 3;
  string source = 4;
  string token = 5;
}

message MessageBody {
  int32 resultCode = 1;
  string resultMsg = 2;
  oneof dataBody {
    LoginRequest loginReq = 3;
    AppStatusRequest appStatusReq = 4;
  }
}